--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,34 +1,38 @@
 * {
   box-sizing: border-box;
   font-family: "Trirong", sans-sans-serif;
-  margin: 0;
-  max-width: 320px;
   justify-content: center;
 }
+div[id="container"] {
+  margin: auto;
+  max-width: 320px;
 
+}
 .top-banner {
-  width: 100%;
   background-color: #0d1c36;
   padding: 15px;
-  position: center;
-  text-align: center;
+  margin: -10px;
+
 }
 .website-title {
   color: white;
   font-size: 20px;
   text-transform: uppercase;
-  width: 90%;
+  width: 100%;
+  text-align: center;
 }
 .sign-up {
   font-size: 18px;
-  padding-top: 15px;
+  padding-top: 10px;
   text-align: center;
+
 }
 .paragraph {
   margin: 3px;
   font-size: 14px;
   border-bottom: 5px solid #0d1c36;
-  padding-bottom: 25px;
+  padding-bottom: 20px;
+  text-align: center;
 }
 .section-header {
   margin: 3px;
@@ -101,6 +105,7 @@ button {
   width: 100%;
   border-color: #4dd1c2;
   margin-bottom: 10px;
+  cursor: pointer;
 }
 
 .copyright {
@@ -116,6 +121,8 @@ button {
 input[type="radio"],
 input[type="checkbox"] {
   margin: 0 4px 8px 0;
+  text-align: left;
+  cursor: pointer;
 }
 /* Media Queries */
 
