--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,11 +1,13 @@
 * {
+  width: 100%;
   box-sizing: border-box;
   font-family: "Trirong", sans-sans-serif;
   justify-content: center;
+  margin: 0 auto;
 }
-div[id="container"] {
-  margin: auto;
-  max-width: 320px;
+.container {
+  margin: 0 auto;
+  width: 95%;
 
 }
 .top-banner {
@@ -23,12 +25,12 @@ div[id="container"] {
 }
 .sign-up {
   font-size: 18px;
-  padding-top: 10px;
+  padding-top: 15px;
   text-align: center;
 
 }
 .paragraph {
-  margin: 3px;
+  margin: 0;
   font-size: 14px;
   border-bottom: 5px solid #0d1c36;
   padding-bottom: 20px;
@@ -80,14 +82,11 @@ label {
   padding-bottom: 10px;
 }
 #zip {
-  display: block;
   width: 125px;
 }
-input[type="radio"],
-input[type="checkbox"] {
+input[type="radio"] + label,
+input[type="checkbox"] + label {
   margin: 0 4px 8px 0;
-}
-#html {
   display: inline;
 }
 textarea {
@@ -105,7 +104,6 @@ button {
   width: 100%;
   border-color: #4dd1c2;
   margin-bottom: 10px;
-  cursor: pointer;
 }
 
 .copyright {
@@ -122,16 +120,10 @@ input[type="radio"],
 input[type="checkbox"] {
   margin: 0 4px 8px 0;
   text-align: left;
-  cursor: pointer;
 }
 /* Media Queries */
 
 @media only screen and (min-width: 768px) {
 
-  form,
-  .container,
-   {
-      max-width: 480px;
-      justify-content: center;
-    }
+
 }
