--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,54 +1,52 @@
-* {
+body {
   font-family: "Trirong", sans-serif;
+  max-width: 100%;
+  font-size: 14px;
 }
-.top-banner {
-  background-color: #0d1c36;
-  padding: 15px;
-  position: fixed;
-  top: 0;
-  width: 100%;
+.first-header {
+  padding-top: 75px;
+  font-size: 16px;
+  margin-top: -10px;
+}
+h2 {
+  font-size: 18px;
+  margin-bottom: -10px;
+  text-align: center;
+}
+p {
+  text-align: center;
+}
+
+.top-border {
+  border-bottom: 5px solid #0d1c36;
+  width: 90%;
+}
+.bottom-border,
+.border-bottom {
+  border-bottom: 1px solid #0d1c36;
+  margin-top: -4px;
+  width: 90%;
 }
 .website-title {
-  display: block;
-  color: white;
-  font-size: 20px;
-  text-transform: uppercase;
   width: 100%;
-  text-align: center;
+  background-color: #0d1c36;
+  position: fixed;
+  top: 0;
+  left: 0;
 }
-.sign-up {
-  font-size: 18px;
-  padding-top: 85px;
-  text-align: center;
-}
-.paragraph {
-  margin: 0;
-  font-size: 14px;
-  border-bottom: 5px solid #0d1c36;
-  padding-bottom: 20px;
-  text-align: center;
-}
-.top-form,
-.fieldset {
-  border-top: 2px solid #0d1c36;
-  width: 90%;
-
-}
-legend {
-  padding-top: 20px;
-  text-align: left;
+h1 {
+  color: white;
   font-size: 22px;
-
+  text-transform: uppercase;
+  text-align: center;
+  padding: 5px;
 }
-fieldset {
-  border: none;
-
-}
-::placeholder {
-  text-align: right;
-  font-style: italic;
-  padding-right: 10px;
-  font-size: 12px;
+.container {
+    box-sizing: border-box;
+    background-color: white;
+    margin: 0 auto;
+    width: 100%;
+    padding: 10px;
 }
 input[type="text"],
 input[type="email"],
@@ -56,35 +54,51 @@ input[type="tel"],
 input[type="address"],
 input[type="city"],
 input[type="state"],
-textarea,
-select {
+select,
+textarea {
   border: none;
-  background: rgba(255,255,255,0.1);
   font-size: 16px;
   text-align: left;
   padding: 10px;
   background-color: #e8eeef;
   color: #8a97a0;
-  margin-bottom: 30px;
+  margin-bottom: 10px;
   width: 95%;
-  overflow: scroll;
-
-
-}
-input {
+  overflow: auto;
   border-radius: 5px;
   border: 1px;
 
 }
 
+::placeholder {
+  text-align: right;
+  opacity: 0.25;
+}
 label {
-  text-align: left;
   display: block;
-  padding-bottom: 10px;
+  margin-top: 5px;
+  text-align: left;
+}
+fieldset {
+  border: none;
+  text-align: left;
+}
 
+legend {
+  font-size: 16px;
+  font-weight: 900;
 }
 #zip {
-  width: 125px;
+width: 150px;
+}
+.contact-label {
+width: 100%;
+}
+.contact-form {
+  margin-bottom: 10px;
+}
+.newsletter-header {
+  text-align: left;
 }
 input[type="radio"] + label,
 input[type="checkbox"] + label {
@@ -92,51 +106,84 @@ input[type="checkbox"] + label {
   display: inline;
   justify-content: left;
 }
+
 textarea {
-  height: 100px;
-  width: 100%;
+  height: 75px;
   resize: none;
-  max-width: 300px;
-  max-height: 200px;
+  width: 90%;
   overflow: scroll;
 }
 button {
-  width: 90%;
-  max-width: 320px;
-  padding: 8px 8px 8px 8px;
+  width: 95%;
+  align-items: center;
+  padding-top: 6px;
+  padding-bottom: 6px;
   color: #FFF;
   background-color: #4dd1c2;
   font-size: 20px;
   text-align: center;
   border-radius: 5px;
   border-color: #4dd1c2;
-  margin-bottom: 10px;
+
 
 }
-
-.copyright {
-  padding-top: 15px;
-  font-style: italic;
-  font-size: 12px;
+footer {
   text-align: center;
-
 }
-.radio_buttons {
-  padding-bottom: 5px;
-}
-.container {
-  width: 90%;
-}
-body {
-  display: flex;
-  flex-direction: column;
-}
-/* Media Queries */
 
 @media only screen and (min-width: 768px) {
-  .form {
-    width: 65%;
-    align-items: center;
+
+  .container {
+    width: 60%;
+
   }
+  label {
+  margin-top: 50px;
+  text-align: left;
+}
+  button {
+  width: 70%;
+}
+
+.contact,
+.zip-form {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: flex-start;
+    width: 100%;
+}
+
+.contact-label {
+    flex-basis: 25%;
+    align-self: flex-start;
+    padding-bottom: 25px;
+    margin-right: -30px;
+}
+
+.contact-input {
+    flex-basis: 70%;
+    margin-left: 10%;
+    align-self: flex-end;
+    
+}
+legend {
+  padding-top: 20px;
+}
+.select {
+  text-align: left;
+}
+#zip {
+  flex-basis: 30%;
+  align-self: flex-end;
+}
+textarea {
+  width: 95%;
+  margin-top: 10px;
+}
+button {
+  width: 100%;
+}
+
 
 }
