--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -3,6 +3,16 @@ body {
   max-width: 100%;
   font-size: 14px;
 }
+input:focus,
+textarea:focus,
+select:focus {
+  outline: 3px solid orange;
+}
+input:hover,
+textarea:hover,
+select:hover {
+  zoom: 110%;
+}
 .first-header {
   padding-top: 75px;
   font-size: 16px;
@@ -67,6 +77,7 @@ textarea {
   overflow: auto;
   border-radius: 5px;
   border: 1px;
+  transition: width 2s;
 
 }
 
@@ -103,7 +114,7 @@ width: 100%;
 .newsletter-checkbox {
   background-color: #F5B1A2;
   border-radius: 10px;
-  border: 1px 1px 1px 1px;
+  border: 1px;
 }
 .newsletter-checkbox:hover {
   opacity: 0.6;
